# AityUahn

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  backlog.txt  bash.exe.stackdump  docker-compose.yml  pyproject.toml  requirements-vercel.txt  saas.yaml  stp.txt  vercel.json
.github/workflows/: pages.yml  release-installer.yml  vercel-deploy.yml
.python/: registry.json
.python/backlogs/: demo-dashboard.yaml
.python/ideas/: demo-dashboard.yaml
.python/saas/: payments.json
api/: index.py
config/: forge.example.yaml
docs/: CNAME  DEPLOY_VERCEL.md  HOW_IT_WORKS.md  INSTALL_RELEASE.md  TEST_AND_LAUNCH.md  app.js  auth.js  config.json  controller.html  demo-data.json  docs.html  guide.html  index.html  landing.css  landing.js  setup.js  styles.css
python/: __init__.py  api_info.py  backlog.py  checkup.py  cli.py  config.py  demo.py  forge.py  ideas.py  models.py  projects.py  status_report.py  storage.py  testing.py  verify_setup.py  wait_for.py
python/backend/: __init__.py  app.py  (+2 more)
scripts/: build_installer.py  build_pages.py  install.ps1  install.sh  installer_core.py  installer_main.py  migrate_db.py  run_cursor_agent.py  verify_setup.ps1  verify_setup.sh
tests/: test_api.py  test_api_info.py  test_checkup.py  test_cli_version.py  test_config.py  test_config_cli.py  test_dashboard_cli.py  test_doctor.py  test_info_cli.py  test_installer_release.py  test_neon_migrate.py  test_open_cli.py  test_pages.py  test_ping_cli.py  test_saas.py  test_saas_health.py  test_status_cli.py  test_storage.py  test_tasks_cli.py  test_ton_payments.py  test_urls_cli.py  test_verify_cli.py  test_wait_cli.py
(+28 files in other folders)
