[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aityuahn"
version = "0.1.0"
description = "AityUahn — configurable forge for ideating, scaffolding, and developing projects with pluggable AI providers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "HyperlinksSpace" }]
dependencies = [
  "click>=8.1",
  "fastapi>=0.111",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pyyaml>=6.0",
  "rich>=13.7",
  "python-dotenv>=1.0",
  "uvicorn[standard]>=0.30",
  "pyjwt>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
aityuahn = "python.cli:main"
au = "python.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["python"]
include = [
  "python/static/landing.html",
  "python/static/controller.html",
  "python/static/docs.html",
  "python/static/app.js",
  "python/static/auth.js",
  "python/static/landing.js",
  "python/static/styles.css",
  "python/static/landing.css",
  "python/static/config.json",
]

[tool.hatch.build.targets.sdist]
include = [
  "python/static/landing.html",
  "python/static/controller.html",
  "python/static/docs.html",
  "python/static/app.js",
  "python/static/auth.js",
  "python/static/landing.js",
  "python/static/styles.css",
  "python/static/landing.css",
  "python/static/config.json",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
